@@ -1,0 +1,6 @@
+### NOTE: SETTABLE_CONFIG
+INSTALL_LOCATION ?= ../../rhel7-x86_64
+KERNEL_MODULE_EVRMA ?= /afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.10/rhel7-x86_64
+
+include ../../src/Makefile.common
+
