@@ -1,5 +1,8 @@
  Release Notes for the evrma package
 -------------------------------------------
+R1.0.10  Mar 09, 2021, Kukhee Kim (khkim)
+         * build aginst evrmaDriver R1.0.10
+         * support rhel7-x86_64
 
 R1.0.9:  Feb 02, 2020, Kukhee Kim (khkim)
          * build against evrmaDriver R1.0.9 and support buildroot-2019.08
